@@ -328,6 +328,9 @@ Unreleased changes (1.0-dev)
 
 122. NUTCH-682 - SOLR indexer does not set boost on the document.
                  (julien nioche via dogacan)
+
+123. NUTCH-279 - Additions to urlnormalizer-regex (Stefan Neufeind, ab)
+
      
 Release 0.9 - 2007-04-02
 
